Bug 463403: Normalize line-endings to LF replace tabs, trim trailing whitespace batch update copyright year to 2015 manual updates to what has been missed, fixed failing tests relying on tabs or spaces
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>
Reviewed-by: MartiNG, TKraus